--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 Pods/
+HPLiveKit.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
 
 ## Build generated
 build/
