--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,9 @@ jobs:
       run: sudo xcode-select -s '/Applications/Xcode_11.3.1.app/Contents/Developer'
     - name: Show Xcode version
       run: xcodebuild -version
+    - name: cd Example
+      run: cd Example
+    - name: Install cocoapods
+      run: pod install
     - name: Build 
       run: xcodebuild -sdk iphonesimulator -configuration Debug build
