--- a/Example/Podfile
+++ b/Example/Podfile
@@ -13,5 +13,6 @@ target 'HPLiveKit_Example' do
     pod 'Nimble', '~> 7.0'
     pod 'FBSnapshotTestCase' , '~> 2.1.4'
     pod 'Nimble-Snapshots' , '~> 6.3.0'
+    pod 'SwiftLint'
   end
 end
