--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,11 +2,12 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 use_frameworks!
 
-platform :ios, '11.0'
+platform :ios, '13.0'
 
 inhibit_all_warnings!
 target 'HPLiveKit_Example' do
   pod 'HPLiveKit', :path => '../'
+  pod 'HPRTMP', :path => '/Users/huipingguo/git/HPRTMP'
 
   target 'HPLiveKit_Tests' do
     inherit! :search_paths
