--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,15 +2,16 @@ name: CI
 
 on: [push]
 
+env:
+  DEVELOPER_DIR: /Applications/Xcode_14.3.app
+  
 jobs:
   build:
 
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v1 
-    - name: Select Xcode version 
-      run: sudo xcode-select -s '/Applications/Xcode_14.3.app/Contents/Developer'
+    - uses: actions/checkout@v1
     - name: Show Xcode version
       run: xcodebuild -version
     - name: Install cocoapods
