--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,14 @@ jobs:
     - uses: actions/checkout@v1
     - name: Show Xcode version
       run: xcodebuild -version
+    - name: Cache CocoaPods
+      uses: actions/cache@v2
+      with:
+        path: Pods
+        key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-pods-
     - name: Install cocoapods
-      run: cd Example;pod install
+      run: cd Example;pod install --repo-update
     - name: Build 
       run: cd Example;xcodebuild  -workspace HPLiveKit.xcworkspace -scheme HPLiveKit-Example -sdk iphonesimulator -configuration Debug build
