Update GitHub Actions workflow for Swift 6 and SPM
- Upgrade actions/cache from v2 to v4 to fix deprecation warning
- Upgrade actions/checkout from v1 to v4
- Remove CocoaPods steps, use Swift Package Manager instead
- Update Xcode version to 16.1 for Swift 6 support
- Add HPRTMP checkout step for local package dependency
- Update build command to use xcodeproj instead of workspace
- Use iPhone 15 simulator for builds
- Cache SPM dependencies and DerivedData

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,25 +3,39 @@ name: CI
 on: [push]
 
 env:
-  DEVELOPER_DIR: /Applications/Xcode_14.2.app
-  
+  DEVELOPER_DIR: /Applications/Xcode_16.1.app
+
 jobs:
   build:
 
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
+
+    - name: Checkout HPRTMP
+      uses: actions/checkout@v4
+      with:
+        repository: huiping192/HPRTMP
+        path: ../HPRTMP
+
     - name: Show Xcode version
       run: xcodebuild -version
-    - name: Cache CocoaPods
-      uses: actions/cache@v2
+
+    - name: Cache SPM dependencies
+      uses: actions/cache@v4
       with:
-        path: Example/Pods
-        key: ${{ runner.os }}-pods-${{ hashFiles('Example/Podfile.lock') }}
+        path: |
+          .build
+          ~/Library/Developer/Xcode/DerivedData
+        key: ${{ runner.os }}-spm-${{ hashFiles('Package.resolved') }}
         restore-keys: |
-          ${{ runner.os }}-pods-
-    - name: Install cocoapods
-      run: cd Example;pod install --repo-update
-    - name: Build 
-      run: cd Example;xcodebuild  -workspace HPLiveKit.xcworkspace -scheme HPLiveKit-Example -sdk iphonesimulator -configuration Debug build
+          ${{ runner.os }}-spm-
+
+    - name: Resolve SPM dependencies
+      run: xcodebuild -resolvePackageDependencies -project Example/HPLiveKit.xcodeproj -scheme HPLiveKit-Example
+
+    - name: Build
+      run: xcodebuild -project Example/HPLiveKit.xcodeproj -scheme HPLiveKit-Example -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15' -configuration Debug build
